# Itera

./: CONTRIBUTING.md  README.md  environment.yml  pyproject.toml
actor_critic/: get_critic_feedback.py  get_critic_judegement.py  get_critic_regenerate.py
dataset/: phy_train.jsonl
libs/: merge.py
problem_solving/PhyChem/: args.py  fine_tune.py  get_a_sol.py  get_b_feedback.py  get_c_regenerate.py  get_finetune_data.py
problem_solving/PubMed/: get_a_sol_med.py  get_b_feedback.py  get_c_regenerate.py
